--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and deploy to GitHub Pages
+name: Build and deploy to GitHub Pages (gh-pages)
 
 on:
   push:
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -32,14 +32,16 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload build artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./dist
+      - name: Copy 404.html to dist (if present)
+        run: |
+          if [ -f public/404.html ]; then
+            cp public/404.html dist/404.html
+          fi
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          # keep the CNAME if present in the repo root
+          keep_files: true
